<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@mipmap/icon_cloud9_logo"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:background="@drawable/box_result_page"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textview_about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_about"
            android:textColor="@android:color/white"
            android:textStyle="normal|bold"
            android:layout_marginBottom="16dp"
            tools:textSize="24sp"/>

        <TextView
            android:id="@+id/textview_about_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/text_about_main"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/textview_about_closing_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/text_about_closing_line"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

</LinearLayout>