<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_fragment_take_test"
    android:layout_width="match_parent"
    android:layout_height="225dp"
    style="@style/MyDialog"
    >

    <LinearLayout
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        >

        <Button
            android:id="@+id/button_take_test_for_me"
            android:text="@string/question_dialog_button_take_test"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:text="-- OR --"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_OR_text"/>

        <TextView
            android:id="@+id/textview_question_text_description"
            android:text="@string/question_dialog_enter_code"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/editText_question_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textEmailAddress"
            android:ems="10"
            android:textSize="12sp"
            />

        <Button
            android:id="@+id/button_take_test_for_another"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question_dialog_button_test_for_another"
            />


    </LinearLayout>

</RelativeLayout>

